@@ -15,6 +15,7 @@
             background-size: cover;
         }
     </style>
+    <script src = "JavaScript/jsMain.js"></script>
     <div class = "centerDiv">
         <body class = "flexBody">
             <article class = "flexArticle">
@@ -40,9 +41,9 @@
                 <a href = "JFocus/JFocus3B/JFocus3B.html" class = "sourceCodeEmoji">
                     JFocus3B
                 </a>
-                <a href = "JFocus.html" class = "sourceCodeEmoji">
+                <a class = "sourceCodeEmoji" onclick="confirmExitCustom1()">
                     JFocus4
-                    <p class = "postletter">(Work in Progress)</p>
+                    <p class = "postletter">(Developer View)</p>
                 </a>
             </article>
         </body>
