@@ -4,13 +4,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;500;900&display=swap" rel="stylesheet">
-    <center>
+    <div>
+        <script src = "JSJFocus4.js"></script>
         <body class = "flexBody">
             <article class = "flexArticle">
-                <center>
-                    <button onclick="calculateBMI()" class = "BMIButton">Danke!</button>
-                </center>
+                <div>
+                    <button onclick="calculateBMI()" class = "BMIButton">Calculate your BMI!</button>
+                </div>
             </article>
         </body>
-    </center>
+    </div>
 </html>
